--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script>
         const localVideo = document.getElementById('localVideo');
         const peerConnection = new RTCPeerConnection();
-        const socket = new WebSocket('wss://<your-heroku-app-name>.herokuapp.com');
+        const socket = new WebSocket('wss://nameless-caverns-19262.com');
 
         socket.onmessage = event => {
             const message = JSON.parse(event.data);
