--- a/clientB.html
+++ b/clientB.html
@@ -8,7 +8,7 @@
     <script>
         const remoteVideo = document.getElementById('remoteVideo');
         const peerConnection = new RTCPeerConnection();
-        const socket = new WebSocket('wss://<your-heroku-app-name>.herokuapp.com');
+        const socket = new WebSocket('wss://nameless-caverns-19262.herokuapp.com');
 
         socket.onmessage = event => {
             const message = JSON.parse(event.data);
