--- a/clientB.html
+++ b/clientB.html
@@ -4,27 +4,50 @@
     <title>WebRTC - Client B</title>
 </head>
 <body>
+    <h2>Client B (Récepteur)</h2>
     <video id="remoteVideo" autoplay playsinline></video>
     <script>
         const remoteVideo = document.getElementById('remoteVideo');
         const peerConnection = new RTCPeerConnection();
-        const socket = new WebSocket('wss://nameless-caverns-19262.herokuapp.com');
+        const socket = new WebSocket('wss://<your-heroku-app-name>.herokuapp.com'); // Remplacez <your-heroku-app-name> par le nom de votre application Heroku
 
+        // Lorsque le serveur envoie un message
         socket.onmessage = event => {
             const message = JSON.parse(event.data);
+            console.log('Message reçu:', message);
+
             if (message.type === 'offer') {
                 peerConnection.setRemoteDescription(new RTCSessionDescription(message.data))
                     .then(() => peerConnection.createAnswer())
                     .then(answer => peerConnection.setLocalDescription(answer))
                     .then(() => {
                         socket.send(JSON.stringify({ type: 'answer', data: peerConnection.localDescription }));
+                    })
+                    .catch(error => {
+                        console.error('Erreur lors de la réponse:', error);
                     });
             } else if (message.type === 'candidate') {
                 peerConnection.addIceCandidate(new RTCIceCandidate(message.data));
             }
         };
 
+        // Lorsque la connexion WebSocket est ouverte
+        socket.onopen = () => {
+            console.log('Connecté au serveur WebSocket');
+        };
+
+        // Lorsque la connexion WebSocket rencontre une erreur
+        socket.onerror = error => {
+            console.error('Erreur WebSocket:', error);
+        };
+
+        // Lorsque la connexion WebSocket est fermée
+        socket.onclose = () => {
+            console.log('Déconnexion du serveur WebSocket');
+        };
+
         peerConnection.ontrack = event => {
+            console.log('Track reçue:', event);
             remoteVideo.srcObject = event.streams[0];
         };
 
