--- a/clientB.html
+++ b/clientB.html
@@ -9,38 +9,46 @@
     <script>
         const remoteVideo = document.getElementById('remoteVideo');
         const peerConnection = new RTCPeerConnection();
-        const socket = new WebSocket('wss://nameless-caverns-19262.herokuapp.com'); // URL du serveur WebSocket
+        let socket;
 
-        socket.onopen = () => {
-            console.log('Connecté au serveur WebSocket');
-        };
+        function connectWebSocket() {
+            socket = new WebSocket('wss://nameless-caverns-19262.herokuapp.com'); // URL du serveur WebSocket
 
-        socket.onmessage = event => {
-            const message = JSON.parse(event.data);
-            console.log('Message reçu:', message);
+            socket.onopen = () => {
+                console.log('Connecté au serveur WebSocket');
+            };
 
-            if (message.type === 'offer') {
-                peerConnection.setRemoteDescription(new RTCSessionDescription(message.data))
-                    .then(() => peerConnection.createAnswer())
-                    .then(answer => peerConnection.setLocalDescription(answer))
-                    .then(() => {
-                        socket.send(JSON.stringify({ type: 'answer', data: peerConnection.localDescription }));
-                    })
-                    .catch(error => {
-                        console.error('Erreur lors de la réponse:', error);
-                    });
-            } else if (message.type === 'candidate') {
-                peerConnection.addIceCandidate(new RTCIceCandidate(message.data));
-            }
-        };
+            socket.onmessage = event => {
+                const message = JSON.parse(event.data);
+                console.log('Message reçu:', message);
 
-        socket.onerror = error => {
-            console.error('Erreur WebSocket:', error);
-        };
+                if (message.type === 'offer') {
+                    peerConnection.setRemoteDescription(new RTCSessionDescription(message.data))
+                        .then(() => peerConnection.createAnswer())
+                        .then(answer => peerConnection.setLocalDescription(answer))
+                        .then(() => {
+                            socket.send(JSON.stringify({ type: 'answer', data: peerConnection.localDescription }));
+                        })
+                        .catch(error => {
+                            console.error('Erreur lors de la réponse:', error);
+                        });
+                } else if (message.type === 'candidate') {
+                    peerConnection.addIceCandidate(new RTCIceCandidate(message.data));
+                }
+            };
 
-        socket.onclose = () => {
-            console.log('Déconnexion du serveur WebSocket');
-        };
+            socket.onerror = error => {
+                console.error('Erreur WebSocket:', error);
+            };
+
+            socket.onclose = event => {
+                console.log(`Déconnexion du serveur WebSocket: Code ${event.code}, Raison: ${event.reason}`);
+                // Reconnexion en cas de fermeture
+                setTimeout(connectWebSocket, 1000);
+            };
+        }
+
+        connectWebSocket();
 
         peerConnection.ontrack = event => {
             console.log('Track reçue:', event);
