--- a/clientB.html
+++ b/clientB.html
@@ -4,7 +4,7 @@
     <title>WebRTC - Client B</title>
 </head>
 <body>
-    <h2>Client B (Récepteur)</h2>
+    <h2>Client B (Récepteur)!</h2>
     <video id="remoteVideo" autoplay playsinline></video>
     <script>
         const remoteVideo = document.getElementById('remoteVideo');
