--- a/clientB.html
+++ b/clientB.html
@@ -10,7 +10,7 @@
     <video id="remoteVideo" autoplay controls style="width: 100%; max-width: 800px;"></video>
     <script>
         // Créez une connexion WebSocket
-        const socket = new WebSocket('wss://votre-serveur-websocket'); // Remplacez par l'URL de votre serveur
+        const socket = new WebSocket('wss://nameless-caverns-19262-2b731442c0a5.herokuapp.com'); // Remplacez par l'URL de votre serveur
 
         socket.onopen = function() {
             console.log('Connexion WebSocket ouverte');
