--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>WebRTC - Client A</title>
 </head>
 <body>
-    <h2>Client A (Émetteur)</h2>
+    <h2>Client A (Émetteur)!</h2>
     <video id="localVideo" autoplay playsinline></video>
     <script>
         const localVideo = document.getElementById('localVideo');
@@ -12,20 +12,34 @@
         let socket;
 
         function connectWebSocket() {
-            socket = new WebSocket('wss://nameless-caverns-19262-2b731442c0a5.herokuapp.com'); // URL du serveur WebSocket
+            socket = new WebSocket('wss://nameless-caverns-19262-2b731442c0a5.herokuapp.com'); // Remplacez par l'URL de votre serveur WebSocket
 
             socket.onopen = () => {
                 console.log('Connecté au serveur WebSocket');
             };
 
             socket.onmessage = event => {
-                const message = JSON.parse(event.data);
-                console.log('Message reçu:', message);
-
-                if (message.type === 'answer') {
-                    peerConnection.setRemoteDescription(new RTCSessionDescription(message.data));
-                } else if (message.type === 'candidate') {
-                    peerConnection.addIceCandidate(new RTCIceCandidate(message.data));
+                if (event.data instanceof Blob) {
+                    // Convertir le Blob en texte
+                    const reader = new FileReader();
+                    reader.onload = function() {
+                        try {
+                            const message = JSON.parse(reader.result);
+                            handleMessage(message);
+                        } catch (error) {
+                            console.error('Erreur lors du traitement du message:', error);
+                        }
+                    };
+                    reader.readAsText(event.data);
+                } else if (typeof event.data === 'string') {
+                    try {
+                        const message = JSON.parse(event.data);
+                        handleMessage(message);
+                    } catch (error) {
+                        console.error('Erreur lors du traitement du message:', error);
+                    }
+                } else {
+                    console.error('Données reçues non-JSON:', event.data);
                 }
             };
 
@@ -40,20 +54,40 @@
             };
         }
 
+        function handleMessage(message) {
+            console.log('Message reçu:', message);
+
+            if (message.type === 'answer') {
+                peerConnection.setRemoteDescription(new RTCSessionDescription(message.data))
+                    .catch(error => {
+                        console.error('Erreur lors de la définition de la description distante:', error);
+                    });
+            } else if (message.type === 'candidate') {
+                peerConnection.addIceCandidate(new RTCIceCandidate(message.data))
+                    .catch(error => {
+                        console.error('Erreur lors de l\'ajout du candidat ICE:', error);
+                    });
+            }
+        }
+
         connectWebSocket();
 
         navigator.mediaDevices.getUserMedia({ video: true })
             .then(stream => {
                 localVideo.srcObject = stream;
                 stream.getTracks().forEach(track => peerConnection.addTrack(track, stream));
-                return peerConnection.createOffer();
-            })
-            .then(offer => peerConnection.setLocalDescription(offer))
-            .then(() => {
-                socket.send(JSON.stringify({ type: 'offer', data: peerConnection.localDescription }));
+
+                peerConnection.createOffer()
+                    .then(offer => peerConnection.setLocalDescription(offer))
+                    .then(() => {
+                        socket.send(JSON.stringify({ type: 'offer', data: peerConnection.localDescription }));
+                    })
+                    .catch(error => {
+                        console.error('Erreur lors de la création de l\'offre:', error);
+                    });
             })
             .catch(error => {
-                console.error('Erreur lors de la capture de la vidéo:', error);
+                console.error('Erreur lors de l\'accès à la caméra:', error);
             });
 
         peerConnection.onicecandidate = event => {
@@ -61,11 +95,6 @@
                 socket.send(JSON.stringify({ type: 'candidate', data: event.candidate }));
             }
         };
-
-        peerConnection.ontrack = event => {
-            console.log('Track reçue:', event);
-        };
-
     </script>
 </body>
 </html>
