--- a/clientB.html
+++ b/clientB.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h2>Client B (Récepteur)!</h2>
+    <button onclick="connectWebSocket()">Reconnecte</button>
     <video id="remoteVideo" autoplay playsinline style="width: 100%; height: auto;"></video>
     <script>
         const remoteVideo = document.getElementById('remoteVideo');
